# battle_snake-rs

./: Cargo.toml  Dockerfile  README.md
src/: battle_snake.rs  main.rs  model.rs  moves.rs  opportunist.rs  random.rs  snake_factory.rs  utils.rs
src/snake_factory/: hungry.rs  opportunist.rs  random.rs
